--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
 <div class="image-container">
-    <img src="D:\Bibliothèque\Documents\pour le stream\planning.png" alt="Description de l'image">
+    <img src="D:\Bibliothèque\Documents\pour_le_stream\planning.png" alt="Description de l'image">
 </div>
 
 </body>
