--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Planning de la semaine !</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -32,7 +33,7 @@
 <body>
 
 <div class="image-container">
-    <img src="D:\Bibliothèque\Documents\pour_le_stream\planning.png" alt="Description de l'image">
+    <img src="planning.png" alt="Description de l'image">
 </div>
 
 </body>
