--- a/planning/index.html
+++ b/planning/index.html
@@ -32,7 +32,7 @@
 <body>
 
 <div class="image-container">
-    <img src="" alt="Description de l'image">
+    <img src="planning.png" alt="Description de l'image">
 </div>
 
 </body>
