--- a/skirk/index.html
+++ b/skirk/index.html
@@ -13,16 +13,16 @@
 
     .container {
       font-family: 'Arial', sans-serif;
-      font-size: 48px;
+      font-size: 72px;
       font-weight: bold;
       text-align: center;
       color: transparent;
-      background: linear-gradient(45deg, #9b59b6, #8e44ad, #6f42c1);
+      background: linear-gradient(45deg, #c39bd3, #9b59b6, #8e44ad, #6f42c1);
       background-clip: text;
       -webkit-background-clip: text;
       display: inline-block;
       position: relative;
-      -webkit-text-stroke: 1px black; /* Déplacé ici pour s'appliquer au texte principal */
+      -webkit-text-stroke: 1px black;
     }
 
     /* Animation des trois points */
@@ -33,9 +33,9 @@
 
     .dot {
       opacity: 0;
-      animation: fadeInOut 1.5s infinite ease-in-out;
+      animation: fadeInOut 3s infinite ease-in-out;
       color: transparent;
-      background: linear-gradient(45deg, #9b59b6, #8e44ad, #6f42c1);
+      background: linear-gradient(45deg, #c39bd3, #9b59b6, #8e44ad, #6f42c1);
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-stroke: 1px black;
@@ -46,19 +46,22 @@
     }
 
     .dot:nth-child(2) {
-      animation-delay: 0.5s;
+      animation-delay: 1s;
     }
 
     .dot:nth-child(3) {
-      animation-delay: 1s;
+      animation-delay: 2s;
     }
 
     @keyframes fadeInOut {
       0%, 100% {
         opacity: 0;
       }
-      50% {
+      33% {
         opacity: 1;
+      }
+      66% {
+        opacity: 0;
       }
     }
   </style>
